Completed all in class exercises

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
+        "Blastoise",
+        "Charmander",
         "Picachu",
         "Pikachu",
         "Spearow",
+        "Squirtle",
         "favourite"
     ]
 }
